link examples delete

--- a/url-shortening/src/index.html
+++ b/url-shortening/src/index.html
@@ -83,24 +83,6 @@
           <div></div>
         </div>
         <div class="form-items" id="items-container">
-          <div class="form-item">
-            <div class="form-item-left">
-              <p>https://wdmentor/awdfw23addfaasffgsgaawdsa.io</p>
-            </div>
-            <div class="form-item-right">
-              <a href="#">https://rel.ink/ks32wa</a>
-              <button class="form-item-button button">Copy</button>
-            </div>
-          </div>
-          <div class="form-item">
-            <div class="form-item-left">
-              <p>https://www.frontendmentor/awdfw23addfaasffgsgaawdsa.io</p>
-            </div>
-            <div class="form-item-right">
-              <a href="#">https://rel.ink/ks32wa</a>
-              <button class="form-item-button button">Copy</button>
-            </div>
-          </div>
         </div>
       </section>
       <section class="statistics">
@@ -117,8 +99,7 @@
             </div>
             <h3>Brand Recognition</h3>
             <p class="statistics-descr text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore sapiente
-              provident molestiae laboriosam recusandae aut quis exercitationem, voluptatem tempora sit doloremque natus
-              facere. Impedit voluptatibus esse tenetur cumque cupiditate neque.</p>
+              provident molestiae laboriosam recustenetur cumque cupiditate neque.</p>
           </div>
           <div class="statistics-divider"></div>
           <div class="statistics-item mt-50">
@@ -130,8 +111,7 @@
             </div>
             <h3>Detailed Records</h3>
             <p class="statistics-descr text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati numquam
-              velit nesciunt dolores tempora eligendi sunt assumenda inventore quia dolorum, aspernatur quam repellendus
-              quae eaque sit possimus beatae facilis accusamus!</p>
+              velit nesciunt dolores tempora eligemus!</p>
           </div>
           <div class="statistics-divider"></div>
           <div class="statistics-item mt-100">
@@ -143,8 +123,7 @@
             </div>
             <h3>Fully Customizable</h3>
             <p class="statistics-descr text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem, ullam. Vero
-              earum dolores, assumenda dolore accusantium suscipit doloremque eveniet ducimus quasi, pariatur fugit cum
-              dignissimos consequatur quidem optio adipisci. Nihil?</p>
+              earum dolores, asio adipisci. Nihil?</p>
           </div>
         </div>
       </section>
