Some todos completed
Fixed links in header. Add real text instead of Lorem

--- a/url-shortening/src/index.html
+++ b/url-shortening/src/index.html
@@ -13,9 +13,9 @@
       <div class="header-left">
         <a href="#" class="logo">Shortly</a>
         <nav class="header-links sm-hidden">
-          <a href="#" class="text header-link">Features</a>
-          <a href="#" class="text header-link">Pricing</a>
-          <a href="#" class="text header-link">Resources</a>
+          <a href="#statistics" class="text header-link">Features</a>
+          <a href="#footer" class="text header-link">Pricing</a>
+          <a href="#footer" class="text header-link">Resources</a>
         </nav>
       </div>
       <div class="header-buttons sm-hidden">
@@ -38,13 +38,13 @@
         </button>
         <ul>
           <li>
-            <a href="#" class="text header-link">Features</a>
+            <a href="#statistics" class="text header-link">Features</a>
           </li>
           <li>
-            <a href="#" class="text header-link">Pricing</a>
+            <a href="#footer" class="text header-link">Pricing</a>
           </li>
           <li>
-            <a href="#" class="text header-link">Resources</a>
+            <a href="#footer" class="text header-link">Resources</a>
           </li>
         </ul>
         <div class="sideNav-buttons">
@@ -85,7 +85,7 @@
         <div class="form-items" id="items-container">
         </div>
       </section>
-      <section class="statistics">
+      <section class="statistics" id="statistics">
         <h2>Advanced statistics</h2>
         <p class="statistics-text text">Track how your links are perfoming across the web with our advanced statistics
           dashboard.</p>
@@ -98,8 +98,8 @@
                 </svg>
             </div>
             <h3>Brand Recognition</h3>
-            <p class="statistics-descr text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore sapiente
-              provident molestiae laboriosam recustenetur cumque cupiditate neque.</p>
+            <p class="statistics-descr text">Boost your brand recognition with each click. Generic links don’t 
+              mean a thing. Branded links help instil confidence in your content.</p>
           </div>
           <div class="statistics-divider"></div>
           <div class="statistics-item mt-50">
@@ -110,8 +110,9 @@
                 </svg>
             </div>
             <h3>Detailed Records</h3>
-            <p class="statistics-descr text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati numquam
-              velit nesciunt dolores tempora eligemus!</p>
+            <p class="statistics-descr text">Gain insights into who is clicking your links. Knowing when and where 
+              people engage with your content helps inform better decisions.
+            </p>
           </div>
           <div class="statistics-divider"></div>
           <div class="statistics-item mt-100">
@@ -122,8 +123,8 @@
                 </svg>
             </div>
             <h3>Fully Customizable</h3>
-            <p class="statistics-descr text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem, ullam. Vero
-              earum dolores, asio adipisci. Nihil?</p>
+            <p class="statistics-descr text">Improve brand awareness and content discoverability through customizable 
+              links, supercharging audience engagement.</p>
           </div>
         </div>
       </section>
@@ -133,7 +134,7 @@
       <button class="button start-button">Get started!</button>
     </section>
   </main>
-  <footer class="footer">
+  <footer class="footer" id="footer">
     <div class="container footer-wrapper">
       <div class="footer-logo logo">Shortly</div>
       <div class="footer-links">
