Add delete all button

--- a/url-shortening/src/index.html
+++ b/url-shortening/src/index.html
@@ -84,6 +84,7 @@
         </div>
         <div class="form-items" id="items-container">
         </div>
+        <button class="form-item-button delete-button hidden" id="delete-button">Delete all</button>
       </section>
     </div>  
       <section class="statistics" id="statistics">
